# innovation.cotacao

./: cotacao.db  pyproject.toml
app/: main.py
app/database/: init_db.py  session.py
app/models/: chat_models.py  entities.py  intencoes.py
app/parser/: alias_parser.py  parser.py  regex_parser.py
app/routers/: produtos.py  web.py
app/services/: chat_service.py  estado_chat.py  historico_service.py  importador_bling.py  interpretador.py  pdf_service.py  proposta_service.py  resolver_produtos.py
app/services/chat/: engine.py
app/static/: chat.js
app/static/css/: app.css
app/templates/: base.html  clientes.html  dashboard.html  importar_produtos.html  lista.html  mensagem.html  produtos.html  proposta.html
tests/: test_parser_chat.py
